--- a/package.json
+++ b/package.json
@@ -10,16 +10,22 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "dayjs": "^1.10.7",
     "emotion-reset": "^3.0.1",
-    "next": "12.0.10",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "gray-matter": "^4.0.3",
+    "lodash": "^4.17.21",
+    "markdown-it": "^12.3.2",
+    "next": "^12.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@types/node": "17.0.17",
-    "@types/react": "17.0.39",
-    "eslint": "8.9.0",
-    "eslint-config-next": "12.0.10",
-    "typescript": "4.5.5"
+    "@types/lodash": "^4.14.179",
+    "@types/markdown-it": "^12.2.3",
+    "@types/node": "^17.0.17",
+    "@types/react": "^17.0.39",
+    "eslint": "^8.9.0",
+    "eslint-config-next": "^12.0.10",
+    "typescript": "^4.5.5"
   }
 }
