--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && git add out/ && git commit -m \"Deploy Next.js to gh-pages\" && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -13,6 +14,7 @@
     "dayjs": "^1.10.7",
     "emotion-reset": "^3.0.1",
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.4.0",
     "lodash": "^4.17.21",
     "markdown-it": "^12.3.2",
     "next": "^12.1.0",
@@ -20,6 +22,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/highlight.js": "^10.1.0",
     "@types/lodash": "^4.14.179",
     "@types/markdown-it": "^12.2.3",
     "@types/node": "^17.0.17",
