--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && git add -f out/ && git commit -m \"Deploy Next.js to gh-pages\" && git subtree push --prefix out origin gh-pages"
+    "deploy": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && node scripts/sitemap_generator.js && git add -f out/ && git commit -m \"Deploy Next.js to gh-pages\" && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -30,6 +30,7 @@
     "@types/react": "^17.0.39",
     "eslint": "^8.9.0",
     "eslint-config-next": "^12.0.10",
+    "prettier": "^2.5.1",
     "typescript": "^4.5.5"
   }
 }
