doc: 직관주도 개발에서 벗어나기 (원고, 퇴고 전)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
   "typescript.tsdk": "node_modules/typescript/lib",
-  "pasteImage.basePath": "${projectRoot}/public",
-  "pasteImage.path": "${projectRoot}/public/images",
-  "pasteImage.insertPattern": "${imageSyntaxPrefix}/${imageFilePath}${imageSyntaxSuffix}"
+  "markdown.copyFiles.destination": {
+    "contents/*.md": "${documentWorkspaceFolder}/public/images/${fileName}"
+  },
+  "markdown.links.openLocation": "currentGroup"
 }
+O
