--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "sitemap": "node scripts/sitemap_generator.js",
+    "sitemap": "tsx scripts/sitemap_generator.ts",
+    "rss": "tsx scripts/rss_generator.ts",
     "date": "date -u +\"%Y-%m-%dT%H:%M:%SZ\""
   },
   "dependencies": {
@@ -14,6 +15,7 @@
     "@emotion/styled": "^11.6.0",
     "dayjs": "^1.10.7",
     "emotion-reset": "^3.0.1",
+    "feed": "^4.2.2",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.4.0",
     "lodash": "^4.17.21",
@@ -28,10 +30,12 @@
     "@types/lodash": "^4.14.179",
     "@types/markdown-it": "^12.2.3",
     "@types/node": "^17.0.17",
+    "@types/prettier": "^3.0.0",
     "@types/react": "^17.0.39",
     "eslint": "^8.9.0",
     "eslint-config-next": "^12.0.10",
-    "prettier": "^2.5.1",
+    "prettier": "^3.2.4",
+    "tsx": "^4.7.0",
     "typescript": "^4.5.5"
   }
 }
