--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@giscus/react": "^3.0.0",
     "dayjs": "^1.10.7",
     "emotion-reset": "^3.0.1",
     "feed": "^4.2.2",
@@ -20,22 +21,22 @@
     "highlight.js": "^11.4.0",
     "lodash": "^4.17.21",
     "markdown-it": "^12.3.2",
-    "next": "^12.1.0",
-    "next-seo": "^5.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "next": "^14.2.11",
+    "next-seo": "^6.6.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/highlight.js": "^10.1.0",
     "@types/lodash": "^4.14.179",
     "@types/markdown-it": "^12.2.3",
-    "@types/node": "^17.0.17",
+    "@types/node": "^22.5.5",
     "@types/prettier": "^3.0.0",
-    "@types/react": "^17.0.39",
+    "@types/react": "^18.3.5",
     "eslint": "^8.9.0",
-    "eslint-config-next": "^12.0.10",
+    "eslint-config-next": "^14.2.11",
     "prettier": "^3.2.4",
     "tsx": "^4.7.0",
-    "typescript": "^4.5.5"
+    "typescript": "^5.6.2"
   }
 }
